Ejercicio 1 de CSS

--- a/index33.html
+++ b/index33.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div id="divejemplo">
+        Un ejemplo de div con estilo
+    </div>
+    <div>Div 1 ejemplo</div>
+    <div>Div 2 ejemplo</div>
+    <div>Div 3 ejemplo</div>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla tempore ducimus inventore eveniet blanditiis hic omnis fuga animi error, porro reiciendis fugiat nostrum nemo molestiae nam pariatur nesciunt labore aperiam?
+    </p>
+    <p class="parrafopie">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam eos repellendus quia ipsa aspernatur accusamus nemo mollitia aut ex optio omnis amet aperiam, cum dignissimos enim voluptatem in error doloremque.
+    </p>
+    <p class="parrafopie">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur natus dolore excepturi molestiae? Iste eius distinctio incidunt aut porro dolore. Voluptate adipisci nihil nemo pariatur, suscipit mollitia iure non dignissimos.
+    </p>
     <form method="POST" action="Controller/procesar.php">
 
         <label>Documento: </label><br>
