--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>Colombia</li>
         <li>Argentina</li>
         <li>Brasil</li>
-        <li>Chile</li>
+        <li>Paraguay</li>
     </ol>
     <ul>
         <li><a href="#estudios">Estudios</a></li>
