Todas las imagenes ajustadas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <link rel="stylesheet" href="./Zozor - Travel diaries_files/style6.css">
+    <link rel="stylesheet" href="css/zozor.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div id="main_wrapper">
         <header>
             <div id="main_title">
-                <img src="./Zozor - Travel diaries_files/zozor_logo.png" alt="logo de Zozor" id="logo">
+                <img src="images/zozor_logo.png" alt="logo de Zozor" id="logo">
                 <h1>Zozor</h1>
                 <h2>Travel diariese</h2>
             </div>
@@ -38,13 +38,12 @@
         <div id="banner_image">
             <div id="banner_description">
                 Reflections on my holiday in the United States...
-                <a href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#"
-                    class="red_button">See article <img src="./Zozor - Travel diaries_files/small_arrow.png" alt=""></a>
+                <a href="" class="red_button">See article <img src="images/small_arrow.png" alt=""></a>
             </div>
         </div>
         <section>
             <article>
-                <h1><img src="./Zozor - Travel diaries_files/pin.png" alt="Travel category" class="ico_categorie">I'm a
+                <h1><img src="images/pin.png" alt="Travel category" class="ico_categorie">I'm a
                     great traveller</h1>
                 <p>Lorem ipsum dolor sit amet...</p>
                 <p>Vivamus sed libero nec mauris pulvinar facilisis ut non sem...</p>
@@ -54,15 +53,15 @@
                 <h1>About the author</h1>
                 <img src="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/images/arrow.png.png"
                     alt="" id="arrow">
-                <p id="zozor_picture"><img src="./Zozor - Travel diaries_files/zozor.png" alt="Zozor Picture"></p>
+                <p id="zozor_picture"><img src="images/zozor.png" alt="Zozor Picture"></p>
                 <p>Let me introduce myself: My name's Zozor. I was born on 23 November 2005.</p>
                 <p>A bit meager, is it not? This is why I've now decided to write my biography to let my readers know
                     who I really am.</p>
-                <p><img src="./Zozor - Travel diaries_files/facebook.png" alt="Facebook"><img
-                        src="./Zozor - Travel diaries_files/twitter.png" alt="Twitter"><img
-                        src="./Zozor - Travel diaries_files/vimeo.png" alt="Vimeo"><img
-                        src="./Zozor - Travel diaries_files/flickr.png" alt="Flickr"><img
-                        src="./Zozor - Travel diaries_files/rss.png" alt="RSS"></p>
+                <p><img src="images/facebook.png" alt="Facebook"><img
+                        src="images/twitter.png" alt="Twitter"><img
+                        src="images/vimeo.png" alt="Vimeo"><img
+                        src="images/flickr.png" alt="Flickr"><img
+                        src="images/rss.png" alt="RSS"></p>
             </aside>
         </section>
         <footer>
@@ -73,10 +72,10 @@
             </div>
             <div id="my_pictures">
                 <h1>My pictures</h1>
-                <p><img src="./Zozor - Travel diaries_files/pic1.jpg" alt="Picture"><img
-                        src="./Zozor - Travel diaries_files/pic2.jpg" alt="Picture"><img
-                        src="./Zozor - Travel diaries_files/pic3.jpg" alt="Picture"><img
-                        src="./Zozor - Travel diaries_files/pic4.jpg" alt="Picture"></p>
+                <p><img src="images/pic1.jpg" alt="Picture"><img
+                        src="images/pic2.jpg" alt="Picture"><img
+                        src="images/pic3.jpg" alt="Picture"><img
+                        src="images/pic4.jpg" alt="Picture"></p>
             </div>
             <div id="my_friends">
                 <h1>My friends</h1>
