--- a/index.html
+++ b/index.html
@@ -20,25 +20,17 @@
             </div>
             <nav>
                 <ul>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Home</a>
-                    </li>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Blog</a>
-                    </li>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Resume</a>
-                    </li>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Contact</a>
-                    </li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <div id="banner_image">
             <div id="banner_description">
                 Reflections on my holiday in the United States...
-                <a href="" class="red_button">See article <img src="images/small_arrow.png" alt=""></a>
+                <a href="#" class="red_button">See article <img src="images/small_arrow.png" alt=""></a>
             </div>
         </div>
         <section>
@@ -80,32 +72,16 @@
             <div id="my_friends">
                 <h1>My friends</h1>
                 <ul>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Pupi
-                            the rabbit</a></li>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Mr
-                            Baobab</a></li>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Kaiwaii</a>
-                    </li>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Perceval.eu</a>
-                    </li>
+                    <li><a href="#">Pupi the rabbit</a></li>
+                    <li><a href="#">Mr Baobab</a></li>
+                    <li><a href="#">Kaiwaii</a></li>
+                    <li><a href="#">Perceval.eu</a></li>
                 </ul>
                 <ul>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Ji</a>
-                    </li>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Super
-                            cucumber</a></li>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Prince</a>
-                    </li>
-                    <li><a
-                            href="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/index.html#">Mr
-                            Fan</a></li>
+                    <li><a href="#">Ji</a></li>
+                    <li><a href="#">Super cucumber</a></li>
+                    <li><a href="#">Prince</a></li>
+                    <li><a href="#">Mr Fan</a></li>
                 </ul>
             </div>
         </footer>
