--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
             </article>
             <aside>
                 <h1>About the author</h1>
-                <img src="file:///C:/Users/jos05/Downloads/ejemplo_html5_css3-master/ejemplo_html5_css3-master/images/arrow.png.png"
-                    alt="" id="arrow">
+                <img src="images/arrow.png" alt="" id="arrow">
                 <p id="zozor_picture"><img src="images/zozor.png" alt="Zozor Picture"></p>
                 <p>Let me introduce myself: My name's Zozor. I was born on 23 November 2005.</p>
                 <p>A bit meager, is it not? This is why I've now decided to write my biography to let my readers know
