--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
             </div>
         </footer>
     </div>
+    <ul id="listar"></ul>
 
-    <script src="js/ejercicio1.js"></script>
+    <script src="js/hola.js"></script>
 </body>
 
 </html>
